# wastebin

./: CHANGELOG.md  Cargo.toml  README.md  build-docker-image.sh
.github/workflows/: theme-showcase.yml
assets/: generate-screenshot.py
crates/wastebin_core/: Cargo.toml
crates/wastebin_core/src/: crypto.rs  db.rs  expiration.rs  id.rs
crates/wastebin_ctl/: Cargo.toml
crates/wastebin_highlight/: Cargo.toml
crates/wastebin_highlight/src/: highlight.rs  lib.rs  markdown.rs
crates/wastebin_server/: Cargo.toml
crates/wastebin_server/src/: assets.rs  cache.rs  main.rs  no-js.css  page.rs  style.css  test_helpers.rs
crates/wastebin_server/src/handlers/: download.rs  extract.rs  mod.rs  theme.rs
crates/wastebin_server/src/handlers/delete/: form.rs
crates/wastebin_server/src/handlers/html/: burn.rs  mod.rs  paste.rs  qr.rs  rendered.rs
crates/wastebin_server/src/handlers/insert/: form.rs
crates/wastebin_server/src/javascript/: index.js  password-toggle.js  paste.js
crates/wastebin_server/templates/: base.html  burn-confirmation.html  burn.html  encrypted.html  error.html  formatted.html  index.html  paste.html  qr.html  rendered.html
