[package]
name = "wastebin_highlight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ammonia = "4"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
syntect = { workspace = true }
thiserror = { workspace = true }
two-face = { workspace = true }

[lints]
workspace = true
